Ex 1 Create a simple String calculator with a method int Add(string numbers)

--- a/KataCalculator/KataCalculator.Tests/KataCalculator.Tests.csproj
+++ b/KataCalculator/KataCalculator.Tests/KataCalculator.Tests.csproj
@@ -78,6 +78,12 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\StringCalculator\StringCalculator.csproj">
+      <Project>{40a4fcaa-ecd8-45a0-8ded-fa8cbc3b6536}</Project>
+      <Name>StringCalculator</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
